Fix board alignment

--- a/react/src/App.css
+++ b/react/src/App.css
@@ -1,5 +1,5 @@
 #root {
-  max-width: 500px;
+  max-width: 450px;
   width: 100%;
   margin: 0 auto;
   padding: 2rem;
@@ -16,6 +16,7 @@
 .game {
   display: flex;
   flex-direction: row;
+  align-items: center;
   justify-content: space-between;
   gap: 25px;
   width: 100%;
